# emu86

./: a.out  build_asm.sh  test.S
include/emu86/: int.h  mov.h  registers.h
include/emu86/device/: disk.h
src/: CMakeLists.txt
src/emu86/: emu86.c  int.c  mov.c  registers.c
src/emu86/device/: disk.c
